--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSeFnmoW6gCNWs+LpilCrp",
+      "authorship_tag": "ABX9TyNMvFk7rYu5g+2jMSbfOsnf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,7 +166,7 @@
       "cell_type": "code",
       "source": [
         "#default message at the start of chat\n",
-        "print(\"Hi, I'm thecleverprogrammer and I like to chat\\nPlease type lowercase English language to start a conversation. Type quit to leave \")\n",
+        "print(\"Hi, I'm Angela and I like to chat\\nPlease type lowercase English language to start a conversation. Type quit to leave \")\n",
         "#Create Chat Bot\n",
         "chat = Chat(pairs, reflections)"
       ],
@@ -175,15 +175,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DUf4RvE_wfA8",
-        "outputId": "ed5c13e4-3fc0-4c20-d2fb-8242bbb20c5d"
+        "outputId": "30b7e107-5a4b-4cba-ee56-978085c9ca62"
       },
-      "execution_count": 37,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hi, I'm thecleverprogrammer and I like to chat\n",
+            "Hi, I'm Angela and I like to chat\n",
             "Please type lowercase English language to start a conversation. Type quit to leave \n"
           ]
         }
