--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 40,
       "metadata": {
         "id": "2Xo5ViSQvEw7"
       },
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "tpCcFtguvNb_"
       },
-      "execution_count": 34,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -135,9 +135,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Al3YhleqwI45",
-        "outputId": "536b2530-3ab7-404d-d10f-f972b4ad2c25"
+        "outputId": "6076f8c7-368f-4b1d-cfe4-e74e2a68a9df"
       },
-      "execution_count": 35,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "TrjXslobwdkc"
       },
-      "execution_count": 36,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -175,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DUf4RvE_wfA8",
-        "outputId": "30b7e107-5a4b-4cba-ee56-978085c9ca62"
+        "outputId": "3dee5981-254d-4c97-f9fa-640b7d41fafb"
       },
-      "execution_count": 39,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,9 +200,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NuD3xLS1wqFW",
-        "outputId": "f3f7f92c-bcc6-4d30-e1f5-04cfceb37d81"
+        "outputId": "b6618f80-cfc9-4e2c-eb1e-ba9fe3c2e9b4"
       },
-      "execution_count": 38,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
             ">bye\n",
             "That is nice to hear\n",
             ">quit\n",
-            "It was nice talking to you. See you soon :)\n"
+            "Bye for now. See you soon :) \n"
           ]
         }
       ]
