--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMvFk7rYu5g+2jMSbfOsnf",
+      "authorship_tag": "ABX9TyM9jN0ofIifmjgHcNsK7W38",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,24 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/hifza-anjum/my_Projects/blob/main/chatbot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Chatbot with NLP using Python"
+      ],
+      "metadata": {
+        "id": "erhshB8wCEIg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### A Chatbot is a computer program which is programmed to interact with a human. A chatbot is designed to reply to a human user based on their queries and conversations."
+      ],
+      "metadata": {
+        "id": "nTt2zqC2CA3R"
+      }
     },
     {
       "cell_type": "markdown",
@@ -200,24 +218,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NuD3xLS1wqFW",
-        "outputId": "b6618f80-cfc9-4e2c-eb1e-ba9fe3c2e9b4"
+        "outputId": "932a8c34-5ba1-4d8e-fc40-d2909bab5aea"
       },
-      "execution_count": 45,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             ">hello\n",
-            "Hey there\n",
+            "Hello\n",
             ">what is your name\n",
             "My name is Angela, but you can just call me robot and I'm a chatbot .\n",
             ">who created you\n",
             "top secret \n",
             ">will you help me\n",
             "Yeah sure, How can I help you \n",
-            ">do you like sports\n",
-            "I'm a very big fan of Cricket\n",
             ">who is your favourite\n",
             "Babar Azam\n",
             ">bye\n",
